# libray

./: .gitmodules  CMakeLists.txt  LICENSE.txt
libray/: CMakeLists.txt
libray/src/: ray.c  ray.h
libray/src/common/: config.h  delay.h  log.c  log.h  lua_ex.c  lua_ex.h  module.c  module.h  platform.h
libray/src/graphics/: graphics.h  graphics_wrap.c  graphics_wrap.h
libray/src/timer/: timer.c  timer.h  timer_wrap.c  timer_wrap.h
libs/SDL2/: CMakeLists.txt
libs/SDL2/VisualC/SDL/: SDL.vcxproj
libs/SDL2/VisualC/SDL/x64/Debug/: version.res
libs/SDL2/VisualC/SDL/x64/Debug/SDL2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SDL2.lastbuildstate  SDL2.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
libs/SDL2/VisualC/SDLmain/: SDLmain.vcxproj
libs/SDL2/VisualC/SDLtest/: SDLtest.vcxproj
libs/SDL2/include/: SDL_config_macosx.h
libs/lua53/: CMakeLists.txt
ray/: CMakeLists.txt
ray/scripts/: boot.lua  main.lua
ray/scripts/ray/: boot.lua
ray/src/: main.c  main.cpp
tools/: generate_vs_proj.bat  sync_scripts.py
